--- a/EscalArt/templates/escalArt/includes/menu.html
+++ b/EscalArt/templates/escalArt/includes/menu.html
@@ -13,7 +13,7 @@
 
         <ul class="menu">
             <li><a href="{% url 'home' %}"><i class="fa-solid fa-house-chimney"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-comment-dots"></i></a></li>
+            <li><a href="{% url 'chats' %}"><i class="fa-solid fa-comment-dots"></i></a></li>
             <li>
                 <a href="{% url 'ayudacliente' %}"><i class="fa-solid fa-question"></i></a>
             </li>
