--- a/EscalArt/static/escalArt/css/Perfil.css
+++ b/EscalArt/static/escalArt/css/Perfil.css
@@ -1063,7 +1063,7 @@ body {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.2);
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .calificacion-interno {
@@ -1097,6 +1097,7 @@ body {
     background-color: #f3f3f3;
     justify-content: center;
     width: 35%;
+    height: 100%;
 }
 
 #testimonials {
@@ -1212,6 +1213,7 @@ body {
     justify-content: center;
     background-color: #12130F;
     overflow: hidden;
+    height: 20%;
 }
 
 .Comentar-calificacion {
@@ -1367,6 +1369,10 @@ body {
 
 /* Isa */
 
+.scrol {
+    height: 100px;
+}
+
 .scroll-div {
     overflow: hidden;
     overflow-y: scroll;
@@ -1384,4 +1390,67 @@ body {
 .child-comment {
     margin-left: 2rem;
     padding-right: 50px;
+}
+
+.contenedor-reviews {
+    overflow: hidden;
+    overflow-y: scroll;
+    height: 60%;
+}
+
+
+/* Hide Radio button */
+
+.rate>input {
+    display: none;
+}
+
+.rate {
+    display: inline-block;
+    ;
+    border: 0;
+}
+
+.rate>label {
+    float: right;
+}
+
+
+/* Showing the stars */
+
+.rate>label:before {
+    display: inline-block;
+    font-size: 1.1rem;
+    font-family: FontAwesome;
+    content: "\f005";
+    margin: 0;
+    padding: 0.3rem .2rem;
+    cursor: pointer;
+}
+
+
+/* Half star */
+
+.rate .half:before {
+    content: "\f089";
+    position: absolute;
+    padding-right: 0;
+}
+
+
+/* Click and hover */
+
+input:checked~label,
+label:hover~label {
+    color: #ffb503;
+}
+
+
+/* hover hightlight */
+
+input:checked+label:hover,
+input:checked~label:hover,
+input:checked~label:hover~label,
+label:hover~input:checked~label {
+    color: #cc9000;
 }
